CamperManagement Changelog
Version 1.0.1-pl,
=================
Fix bug with options grid not pre-selecting properly.

Version 1.0.0-pl, June 27 2011
==============================
Add German & French translations (Thanks Anselm & Romain!)
Fix a few hardcoded strings
Fix "new" windows not properly resetting after updating a record

Version 1.0.0-rc1, June 24 2011
===============================
Initial public release.